fix tabs gap

--- a/src/shared/ui/Tabs/Tabs.module.scss
+++ b/src/shared/ui/Tabs/Tabs.module.scss
@@ -1,6 +1,7 @@
 .tabs {
   position: relative;
   display: flex;
+  padding-bottom: 6px;
 
   transition: color 0.7s ease;
 
